--- a/index.html
+++ b/index.html
@@ -17,106 +17,142 @@ body {
     position: relative;
 }
 
-/* Grain overlay */
-body::after {
-    content: "";
-    position: fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    pointer-events:none;
-    background: url('images/grain.png');
-    opacity: 0.05;
-    z-index: 1;
-}
-
 a { text-decoration: none; color: #111; font-weight: 600; }
 a:hover { opacity: 0.7; }
 
-.container { max-width: 900px; margin: 0 auto; padding: 50px 25px; position: relative; z-index:2; }
+.container { max-width: 900px; margin: 0 auto; padding: 50px 25px; text-align: center; }
 
-h1, h2, h3 { font-family: 'Playfair Display', serif; color: #111; margin-bottom: 15px; text-align: center; }
+h1, h2, h3 { font-family: 'Playfair Display', serif; color: #111; margin-bottom: 15px; }
 h1 { font-size: 72px; margin-top: 20px; }
 h2 { font-size: 32px; margin-top: 50px; }
 h3 { font-size: 24px; margin-top: 40px; }
 
-p, li { font-size: 17px; opacity: 0.9; text-align: center; }
-ul { padding-left: 20px; margin-top: 5px; list-style:none; }
+p, li { font-size: 17px; opacity: 0.9; }
+ul { padding-left: 20px; margin-top: 5px; }
 
-.section { margin-bottom: 60px; opacity: 0; transform: translateY(30px); transition: all 1s ease; }
-
-.section.visible { opacity: 1; transform: translateY(0); }
+.section { margin-bottom: 60px; }
 
 .gallery { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 15px; margin-top: 20px; }
 .gallery img { width: 100%; border-radius: 6px; object-fit: cover; filter: grayscale(15%) contrast(1.05); }
 
-.navbar { display: flex; justify-content: center; gap: 30px; margin-bottom: 50px; font-weight: 600; position: relative; z-index:2; }
+.navbar { display: flex; justify-content: center; gap: 30px; margin-bottom: 50px; font-weight: 600; }
 .navbar a { text-transform: uppercase; font-size: 14px; letter-spacing: 1px; }
 
 .footer { text-align: center; opacity: 0.6; font-size: 14px; margin-top: 60px; }
 .contact-block { margin-top: 40px; padding: 20px 30px; border: 1px solid #d8d5d1; border-radius: 8px; background: #faf9f7; }
 
-/* Home specific */
-.home-header {
-    margin-bottom:20px;
-    opacity:0;
-    transform: translateY(20px);
-    transition: all 1.2s ease;
-}
-.home-header.visible {
-    opacity:1;
-    transform: translateY(0);
-}
-.home-header h1 {
-    font-size: 48px;
-    margin:0;
-    letter-spacing:1px;
-}
-.home-header p {
-    font-size:18px;
-    margin:10px 0 0;
-    opacity:0.8;
-    letter-spacing:2px;
-}
-.home-line {
-    width:60px;
-    height:2px;
-    background:#111;
-    margin:15px auto 0;
-    opacity:0.5;
-    transition: all 1.2s ease;
-}
-.home-line.visible {
-    opacity:0.8;
-    transform: scaleX(1.1);
-}
-.home-image {
-    width:100%; 
-    border-radius:6px; 
-    margin-top:25px; 
-    transform: scale(0.97) translateY(0);
-    opacity: 0;
-    transition: all 1.5s ease;
+/* ---------- CINEMATIC HOME IMAGE ---------- */
+.home-image-container {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    margin-top: 25px;
 }
 
-/* About specific */
-.about-content {
-    display:flex; 
-    gap:20px; 
-    align-items:flex-start; 
-    justify-content:center; 
-    flex-wrap:wrap;
+.home-image-container img {
+    width: 100%;
+    border-radius: 6px;
 }
-.about-content p {
-    max-width:600px; 
-    text-align:center;
+
+.home-image-container::after {
+    content: "";
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    border-radius:6px;
+    pointer-events:none;
+    background: linear-gradient(135deg, rgba(242, 229, 200,0.2), rgba(101, 67, 33,0.2));
+    mix-blend-mode: soft-light;
 }
-.about-content img {
-    width:200px; 
-    border-radius:6px; 
-    flex-shrink:0;
+
+/* ---------- CSS-ONLY FILM GRAIN ---------- */
+body::before {
+    content: "";
+    position: fixed;
+    top:0; left:0;
+    width:100%; height:100%;
+    pointer-events:none;
+    z-index: 1000;
+    background: 
+        repeating-linear-gradient(
+            0deg,
+            rgba(0,0,0,0.02) 0px,
+            rgba(0,0,0,0.02) 1px,
+            transparent 1px,
+            transparent 2px
+        ),
+        repeating-linear-gradient(
+            90deg,
+            rgba(0,0,0,0.02) 0px,
+            rgba(0,0,0,0.02) 1px,
+            transparent 1px,
+            transparent 2px
+        );
+    animation: grainMove 2s infinite linear;
 }
+
+@keyframes grainMove {
+    0% { transform: translate(0,0); }
+    100% { transform: translate(100px,100px); }
+}
+
+/* ---------- VIGNETTE ---------- */
+body::after {
+    content: "";
+    position: fixed;
+    top:0; left:0;
+    width:100%; height:100%;
+    pointer-events:none;
+    background: radial-gradient(ellipse at center, rgba(0,0,0,0) 70%, rgba(0,0,0,0.15) 100%);
+    z-index: 1001;
+}
+
+/* ---------- HOME HEADER ANIMATION ---------- */
+@keyframes fadeInUp {
+    0% { opacity:0; transform: translateY(20px); }
+    100% { opacity:1; transform: translateY(0); }
+}
+
+.home-header {
+    animation: fadeInUp 1s ease forwards;
+}
+
+.home-header-line {
+    width: 60px;
+    height: 2px;
+    background: #111;
+    margin: 15px auto 0;
+    opacity:0;
+    animation: fadeInUp 1.2s ease forwards;
+}
+
+/* ---------- ABOUT FLEX ---------- */
+.about-flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+    text-align: center;
+}
+
+.about-text {
+    max-width: 600px;
+}
+
+.about-flex img {
+    width: 200px;
+    border-radius: 6px;
+    flex-shrink: 0;
+}
+
+/* ---------- CENTER ALL TEXT ---------- */
+#sound, #picture, #space, #contact, #about h2 {
+    text-align: center;
+}
+
 </style>
 </head>
 <body>
@@ -136,15 +172,21 @@ ul { padding-left: 20px; margin-top: 5px; list-style:none; }
     <!-- HOME -->
     <div id="home" class="section" style="padding:60px 20px 40px;">
         <div class="home-header">
-            <h1>VanVeenIdentity</h1>
-            <p><strong>Sound · Picture · Space</strong></p>
-            <div class="home-line"></div>
+            <h1 style="font-size:48px; margin:0; letter-spacing:1px;">VanVeenIdentity</h1>
+            <p style="font-size:18px; margin:10px 0 0; opacity:0.8; letter-spacing:2px;">
+                <strong>Sound · Picture · Space</strong>
+            </p>
         </div>
-        <p style="max-width:700px; margin:0 auto 30px; line-height:1.6;">
+        <div class="home-header-line"></div>
+
+        <p style="max-width:700px; margin:30px auto 30px; line-height:1.6;">
             Crafting signature musical experiences that elevate artists, brands, and projects. Enhanced with 
             visuals, spatial design, and bespoke creations for a fully immersive identity.
         </p>
-        <img src="images/ampex.jpg" class="home-image">
+
+        <div class="home-image-container">
+            <img src="images/ampex.jpg" class="home-image">
+        </div>
     </div>
 
     <!-- SOUND -->
@@ -154,8 +196,8 @@ ul { padding-left: 20px; margin-top: 5px; list-style:none; }
             Specializing in lo-fi and jazzy tracks that melt into the background or set the perfect boutique atmosphere. Ideal for media, branding, or immersive experiences.
         </p>
         <ul>
-            <li><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2vjNAxkUvIrgCDyXtBD9fy?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></li>
-            <li><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1F8ubL4H0e4SNAZmH45jaf?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></li>
+            <li><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2vjNAxkUvIrgCDyXtBD9fy?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></li>
+            <li><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1F8ubL4H0e4SNAZmH45jaf?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></li>
         </ul>
     </div>
 
@@ -163,8 +205,7 @@ ul { padding-left: 20px; margin-top: 5px; list-style:none; }
     <div id="picture" class="section">
         <h2>Picture</h2>
         <p>Capturing the essence of the creative process, from intimate studio moments to polished product and interior photography. 
-            Combining documentary storytelling with an artistic eye to produce images that feel authentic, atmospheric, and visually striking.
-        </p>
+            Combining documentary storytelling with an artistic eye to produce images that feel authentic, atmospheric, and visually striking.</p>
         <div class="gallery">
             <img src="images/desk.jpg">
             <img src="images/gibson.jpg">
@@ -175,8 +216,7 @@ ul { padding-left: 20px; margin-top: 5px; list-style:none; }
     <div id="space" class="section">
         <h2>Space</h2>
         <p>Bespoke solutions for functional and inspiring environments—pedalboards from reclaimed wood, custom acoustic panels, interior pillars, or complete studio builds. 
-            High-end materials like sheepswool ensure superior quality and acoustics, creating spaces that feel intentional, comfortable, and refined.
-        </p>
+            High-end materials like sheepswool ensure superior quality and acoustics, creating spaces that feel intentional, comfortable, and refined.</p>
         <div class="gallery">
             <img src="images/vase.jpg">
             <img src="images/pedal.jpg">
@@ -186,15 +226,15 @@ ul { padding-left: 20px; margin-top: 5px; list-style:none; }
     <!-- ABOUT -->
     <div id="about" class="section">
         <h2>About</h2>
-        <div class="about-content">
-            <p>
-                Tim van Veen is a sonic and visual storyteller based in Amsterdam, 
+        <div class="about-flex">
+            <div class="about-text">
+                <p>Tim van Veen is a sonic and visual storyteller based in Amsterdam, 
                 blending music, photography, and spatial design to craft cinematic atmospheres for boutique brands 
                 and bespoke projects. With a refined sense of aesthetics and a deep awareness of the audience’s experience, 
                 he translates a brand’s essence into every detail. Beyond concept and direction, Tim’s hands-on approach 
-                shapes the space in between—bringing ideas to life with precision, character, and atmosphere.
-            </p>
-            <img src="images/portrait.jpg">
+                shapes the space in between—bringing ideas to life with precision, character, and atmosphere.</p>
+            </div>
+            <img src="images/portrait.jpg" alt="Tim van Veen portrait">
         </div>
     </div>
 
@@ -210,41 +250,6 @@ ul { padding-left: 20px; margin-top: 5px; list-style:none; }
     <p class="footer">© 2025 VanVeenIdentity — Sound · Picture · Space</p>
 
 </div>
-
-<script>
-// Fade-in on scroll
-const sections = document.querySelectorAll('.section');
-const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-        if(entry.isIntersecting){
-            entry.target.classList.add('visible');
-        }
-    });
-}, {threshold:0.1});
-
-sections.forEach(section => observer.observe(section));
-
-// Home header and line animation
-const homeHeader = document.querySelector('.home-header');
-const homeLine = document.querySelector('.home-line');
-window.addEventListener('load', () => {
-    homeHeader.classList.add('visible');
-    homeLine.classList.add('visible');
-});
-
-// Home image animation & parallax
-const homeImage = document.querySelector('.home-image');
-window.addEventListener('load', () => {
-    homeImage.style.opacity = 1;
-    homeImage.style.transform = 'scale(1) translateY(0)';
-});
-window.addEventListener('scroll', () => {
-    const scrolled = window.scrollY;
-    homeImage.style.transform = `scale(1) translateY(${scrolled * 0.1}px)`;
-    // subtle line glow effect while scrolling
-    homeLine.style.opacity = 0.8 + scrolled*0.0005;
-});
-</script>
 
 </body>
 </html>
