--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@ body {
     background: #f6f4f1;
     color: #1c1c1c;
     line-height: 1.6;
-    position: relative;
 }
 
 a { text-decoration: none; color: #111; font-weight: 600; }
@@ -41,7 +40,7 @@ ul { padding-left: 20px; margin-top: 5px; }
 .footer { text-align: center; opacity: 0.6; font-size: 14px; margin-top: 60px; }
 .contact-block { margin-top: 40px; padding: 20px 30px; border: 1px solid #d8d5d1; border-radius: 8px; background: #faf9f7; }
 
-/* ---------- CINEMATIC HOME IMAGE ---------- */
+/* ---------- HOME IMAGE CINEMATIC ---------- */
 .home-image-container {
     position: relative;
     display: inline-block;
@@ -54,6 +53,7 @@ ul { padding-left: 20px; margin-top: 5px; }
     border-radius: 6px;
 }
 
+/* ZAND/WALNOOT OVERLAY */
 .home-image-container::after {
     content: "";
     position: absolute;
@@ -65,48 +65,6 @@ ul { padding-left: 20px; margin-top: 5px; }
     pointer-events:none;
     background: linear-gradient(135deg, rgba(242, 229, 200,0.2), rgba(101, 67, 33,0.2));
     mix-blend-mode: soft-light;
-}
-
-/* ---------- CSS-ONLY FILM GRAIN ---------- */
-body::before {
-    content: "";
-    position: fixed;
-    top:0; left:0;
-    width:100%; height:100%;
-    pointer-events:none;
-    z-index: 1000;
-    background: 
-        repeating-linear-gradient(
-            0deg,
-            rgba(0,0,0,0.02) 0px,
-            rgba(0,0,0,0.02) 1px,
-            transparent 1px,
-            transparent 2px
-        ),
-        repeating-linear-gradient(
-            90deg,
-            rgba(0,0,0,0.02) 0px,
-            rgba(0,0,0,0.02) 1px,
-            transparent 1px,
-            transparent 2px
-        );
-    animation: grainMove 2s infinite linear;
-}
-
-@keyframes grainMove {
-    0% { transform: translate(0,0); }
-    100% { transform: translate(100px,100px); }
-}
-
-/* ---------- VIGNETTE ---------- */
-body::after {
-    content: "";
-    position: fixed;
-    top:0; left:0;
-    width:100%; height:100%;
-    pointer-events:none;
-    background: radial-gradient(ellipse at center, rgba(0,0,0,0) 70%, rgba(0,0,0,0.15) 100%);
-    z-index: 1001;
 }
 
 /* ---------- HOME HEADER ANIMATION ---------- */
@@ -152,7 +110,6 @@ body::after {
 #sound, #picture, #space, #contact, #about h2 {
     text-align: center;
 }
-
 </style>
 </head>
 <body>
