--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ ul { padding-left: 20px; margin-top: 5px; }
     <div id="space" class="section">
         <h2>Space</h2>
         <p>Bespoke solutions for functional and inspiring environments—pedalboards from reclaimed wood, custom acoustic panels, interior pillars, or complete studio builds. 
-            High-end materials like sheepswool ensure superior quality and acoustics, creating spaces that feel intentional, comfortable, and refined.</p>
+            High-end materials ensure superior quality and acoustics, creating spaces that feel intentional, comfortable, and refined.</p>
         <div class="gallery">
             <img src="images/vase.jpg">
             <img src="images/pedal.jpg">
