Revise CV styles and update personal information
Updated styles and content in the CV HTML file.

--- a/cv/index.html
+++ b/cv/index.html
@@ -11,16 +11,16 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
-    background: #ffffff; /* wit achtergrond zoals VanVeenIdentity */
-    color: #1a1a1a; /* donkergrijs voor tekst */
+    background: #f6f4f1;
+    color: #1c1c1c;
     line-height: 1.6;
 }
 
-a { text-decoration: none; color: #0077cc; font-weight: 600; }
-a:hover { opacity: 0.8; }
+a { text-decoration: none; color: #111; font-weight: 600; }
+a:hover { opacity: 0.7; }
 
 .container {
-    max-width: 1200px;
+    max-width: 900px;
     margin: 0 auto;
     padding: 50px 25px;
 }
@@ -33,9 +33,8 @@ a:hover { opacity: 0.8; }
 
 .header h1 {
     font-family: 'Playfair Display', serif;
-    font-size: 48px;
+    font-size: 72px;
     margin-bottom: 10px;
-    letter-spacing: 1px;
 }
 
 .header p {
@@ -60,7 +59,7 @@ a:hover { opacity: 0.8; }
 .left-col h3 {
     font-family: 'Playfair Display', serif;
     margin-bottom: 10px;
-    color: #0077cc; /* accentkleur van VanVeenIdentity */
+    color: #111;
 }
 
 .left-col ul {
@@ -81,17 +80,10 @@ a:hover { opacity: 0.8; }
 /* Section titles */
 .section-title {
     font-family: 'Playfair Display', serif;
-    font-size: 22px;
+    font-size: 24px;
     margin-top: 30px;
     margin-bottom: 10px;
-    color: #0077cc; /* accentkleur */
-}
-
-/* QR code */
-.qr {
-    width: 100px;
-    height: 100px;
-    margin-top: 10px;
+    color: #111;
 }
 
 /* Responsive */
@@ -111,8 +103,8 @@ a:hover { opacity: 0.8; }
 
     <!-- HEADER -->
     <div class="header">
-        <h1>TIM VAN VEEN</h1>
-        <p><em>Creative Director – Sound & Visual Identity – Customer Experience – Interieur & Space Design</em></p>
+        <h1>TIM VAN VEEEN</h1>
+        <p><em>Creative Director – Sound & Visual Identity – Customer Experience – Interior & Space Design</em></p>
         <p>Amsterdam</p>
     </div>
 
@@ -124,117 +116,116 @@ a:hover { opacity: 0.8; }
             <!-- CONTACT -->
             <h3>CONTACT</h3>
             <ul>
-                <li>📱 [telefoon]</li>
-                <li>✉️ [e-mail]</li>
-                <li>🔗 Portfolio: Scan QR</li>
+                <li>📱 +31621506660</li>
+                <li>✉️ tim@vanveenidentity.com</li>
+                <li>🔗 www.vanveenidentity.com</li>
             </ul>
-            <img src="images/qr.png" alt="QR Code" class="qr">
 
-            <!-- VAARDIGHEDEN -->
-            <h3>VAARDIGHEDEN</h3>
+            <!-- SKILLS -->
+            <h3>SKILLS</h3>
             <ul>
                 <li>Creative direction</li>
-                <li>Sound design & 432 Hz atmospheres</li>
+                <li>Sound design & music production</li>
                 <li>Visual storytelling</li>
-                <li>Klantbeleving (CX)</li>
-                <li>Interieurstyling & mood design</li>
-                <li>Kleur, sfeer, materiaalgevoel</li>
-                <li>Klus & technische uitvoering</li>
+                <li>Customer experience (CX)</li>
+                <li>Interior styling & mood design</li>
+                <li>Color, atmosphere, material sense</li>
+                <li>Handy work & technical execution</li>
                 <li>Video editing / color grading (FCP)</li>
-                <li>Photoshop (basis)</li>
-                <li>Illustrator (basis)</li>
+                <li>Photoshop (basic)</li>
+                <li>Illustrator (basic)</li>
             </ul>
 
             <!-- TOOLS -->
             <h3>TOOLS</h3>
             <ul>
+                <li>Ableton Live</li>
+                <li>Avid Pro Tools</li>
                 <li>Final Cut Pro</li>
                 <li>Adobe Photoshop</li>
-                <li>(lichte) Adobe Illustrator</li>
-                <li>Canva</li>
-                <li>Film-style presets</li>
-                <li>Analog grain editing</li>
+                <li>(basic) Adobe Illustrator</li>
             </ul>
 
-            <!-- INTERESSES -->
-            <h3>INTERESSES</h3>
+            <!-- INTERESTS -->
+            <h3>INTERESTS</h3>
             <ul>
-                <li>Mode</li>
-                <li>Interieur esthetiek</li>
-                <li>Vintage fotografie</li>
+                <li>Fashion</li>
+                <li>Interior aesthetics</li>
+                <li>Vintage photography</li>
                 <li>Slow living</li>
                 <li>Biohacking</li>
-                <li>Natuurvoeding</li>
+                <li>Natural nutrition</li>
                 <li>Lofi & jazz</li>
             </ul>
         </div>
 
         <!-- RIGHT COLUMN -->
         <div class="right-col">
-            <!-- PROFIEL -->
-            <h3 class="section-title">PROFIEL</h3>
+            <!-- PROFILE -->
+            <h3 class="section-title">PROFILE</h3>
             <p>
-                Ik creëer sound, visuals en sfeer voor merken, winkels en creatieve ruimtes.
-                Met een achtergrond in muziek (432 Hz, lofi, jazzy), vintage fotografie, interieur & klantbeleving help ik plekken een unieke vibe te geven — warm, rustig en esthetisch.
+                I create sound, visuals and atmosphere for brands, stores and creative spaces.
+                With a background in music, vintage photography, interior & customer experience, I help places develop a unique vibe — warm, calm, and aesthetic.
             </p>
             <p>
-                Ik combineer <strong>creative direction</strong> met <strong>hands-on ondersteuning</strong>: van soundscapes en visuele content tot praktische inrichting en klussen. Beschikbaar voor samenwerkingen van 2 dagen per week.
+                I combine <strong>creative direction</strong> with <strong>hands-on support</strong>: from soundscapes and visual content to practical interior work.
             </p>
 
-            <!-- WAT IK OPLOS -->
-            <h3 class="section-title">WAT IK VOOR EEN MERK / WINKEL OPLOS</h3>
+            <!-- WHAT I SOLVE -->
+            <h3 class="section-title">WHAT I SOLVE FOR A BRAND / STORE</h3>
             <p><strong>Sound identity</strong><br>
-            • 432 Hz ambient, lofi & jazzy instore muziek<br>
-            • Custom playlists en brand soundscapes</p>
+            • Custom sound logo's and in-store music<br>
+            • Custom playlists and brand soundscapes</p>
 
             <p><strong>Visual identity</strong><br>
-            • Vintage grain fotografie<br>
-            • Korte sfeer-video’s<br>
-            • Kleurgrading & mood content</p>
+            • Vintage grain photography<br>
+            • Short mood videos<br>
+            • Color grading & mood content</p>
 
             <p><strong>Customer experience</strong><br>
-            • Warme, rustige, stijlvolle beleving<br>
-            • Klanten helpen en service met karakter</p>
+            • Warm, calm, stylish atmosphere<br>
+            • Supporting customers with character and service</p>
 
-            <p><strong>Interieur & space design</strong><br>
-            • Styling, flow, kleur, materiaalkeuze<br>
-            • Mogelijkheid tot samenwerking met stylist<br>
-            • Hands-on uitvoering: schilderen, opbouwen, kleine klussen</p>
+            <p><strong>Interior & space design</strong><br>
+            • Styling, flow, color, material choices<br>
+            • Acoustics and experience<br>
+            • Hands-on execution: design & build</p>
 
             <p><strong>Hands-on support</strong><br>
-            • Verkoop, vloerwerk, winkelpresentatie<br>
-            • Helpen met dagelijkse taken en sfeerbewaking</p>
+            • Sales, floor work, store presentation<br>
+            • Daily support and atmosphere monitoring</p>
 
-            <!-- ERVARING -->
-            <h3 class="section-title">ERVARING</h3>
-            <p><strong>Creative Director & Producer (Freelance)</strong><br>
-            xxxx – heden<br>
-            – Sound identity, muziekproductie 432 Hz / lofi / jazz<br>
-            – Visuele mood content<br>
-            – Korte video’s & kleurgrading<br>
-            – Branding & sfeercreatie</p>
+            <!-- EXPERIENCE -->
+            <h3 class="section-title">EXPERIENCE</h3>
+            <p><strong>Creative Director & Producer (</strong><br>
+            2024 – present<br>
+            – Sound identity, music production <br>
+            – Visual mood content<br>
+            – Short videos & color grading<br>
+            – Branding & atmosphere creation</p>
 
             <p><strong>Studio Owner / Music Composer</strong><br>
-            xxxx – heden<br>
-            – Muziek voor sync, library en achtergrond<br>
-            – Artistieke releases<br>
+            2013 – present<br>
+            – Music for sync, library and background<br>
+            – Artistic releases<br>
             – Creative direction in sound</p>
 
-            <p><strong>Fotografie & Video (Freelance)</strong><br>
-            xxxx – heden<br>
-            – Film-look fotografie<br>
-            – Korte mood-video’s<br>
+            <p><strong>Photography & Video (Freelance)</strong><br>
+            2021 – present<br>
+            – Film-look photography<br>
+            – Short mood videos<br>
             – Postproduction & color grading</p>
 
-            <p><strong>Interieur & Kluswerk (met stylist)</strong><br>
-            xxxx – heden<br>
-            – Styling & inrichting<br>
-            – Kleine bouw/uitvoer<br>
-            – Materialen, kleuren, flow</p>
+            <p><strong>Interior & Design </strong><br>
+            2018– present<br>
+            – Styling & interior setup<br>
+            – Small construction / execution<br>
+            – Material, color, flow</p>
 
-            <p><strong>Assistent aannemer (sporadisch)</strong><br>
-            – Montage, reparaties, schilderen<br>
-            – Praktisch & oplossingsgericht</p>
+            <p><strong>Assistant Contractor </strong><br>
+            2010 – present<br>
+            – Assembly, repairs, construction<br>
+            – Practical & solution-oriented</p>
 
         </div>
 
