Refine job title and skills description

--- a/cv/index.html
+++ b/cv/index.html
@@ -105,7 +105,7 @@ a:hover { opacity: 0.7; }
     <!-- HEADER -->
     <div class="header">
         <h1>TIM VAN VEEEN</h1>
-        <p><em>Creative Director – Sound & Visual Identity – Customer Experience – Interior & Space Design</em></p>
+        <p><em>Creative Director – Sound & Visual Identity – Customer Experience through Interior & Space Design</em></p>
         <p>Amsterdam</p>
     </div>
 
@@ -128,7 +128,7 @@ a:hover { opacity: 0.7; }
                 <li>Creative direction</li>
                 <li>Sound design & music production</li>
                 <li>Visual storytelling</li>
-                <li>Customer experience (CX)</li>
+                <li>Customer experience</li>
                 <li>Interior styling & mood design</li>
                 <li>Color, atmosphere, material sense</li>
                 <li>Handy work & technical execution</li>
