--- a/cv/index.html
+++ b/cv/index.html
@@ -104,7 +104,7 @@ a:hover { opacity: 0.7; }
 
     <!-- HEADER -->
     <div class="header">
-        <h1>TIM VAN VEEEN</h1>
+        <h1>TIM VAN VEEN</h1>
         <p><em>Creative Director – Sound & Visual Identity – Customer Experience through Interior & Space Design</em></p>
         <p>Amsterdam</p>
     </div>
@@ -115,12 +115,23 @@ a:hover { opacity: 0.7; }
         <!-- LEFT COLUMN -->
         <div class="left-col">
             <!-- CONTACT -->
-            <h3>CONTACT</h3>
-            <ul>
-                <li>📱 +31621506660</li>
-                <li>✉️ tim@vanveenidentity.com</li>
-                <li>🔗 www.vanveenidentity.com</li>
-            </ul>
+<h3>CONTACT</h3>
+<ul style="list-style:none; padding-left:0; text-align:center;">
+    <!-- Phone -->
+    <li style="margin-bottom:10px;">
+        📱 <a href="tel:+31621506660">+31 6 21506660</a>
+    </li>
+
+    <!-- Email -->
+    <li style="margin-bottom:10px;">
+        ✉️ <a href="mailto:tim@vanveenidentity.com">tim@vanveenidentity.com</a>
+    </li>
+
+    <!-- Website -->
+    <li style="margin-bottom:10px;">
+        🔗 <a href="https://www.vanveenidentity.com" target="_blank">www.vanveenidentity.com</a>
+    </li>
+</ul>
 
             <!-- SKILLS -->
             <h3>SKILLS</h3>
