--- a/cv/index.html
+++ b/cv/index.html
@@ -7,7 +7,6 @@
 <title>Tim van Veen — CV</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
 <style>
-/* ---------- GLOBAL ---------- */
 body {
     margin: 0;
     padding: 0;
@@ -26,7 +25,7 @@ a:hover { opacity: 0.7; }
     padding: 50px 25px;
 }
 
-/* ---------- HEADER ---------- */
+/* HEADER */
 .header {
     text-align: center;
     margin-bottom: 60px;
@@ -44,17 +43,18 @@ a:hover { opacity: 0.7; }
     line-height: 1.4;
 }
 
-/* ---------- MAIN LAYOUT ---------- */
+/* MAIN LAYOUT */
 .main {
     display: flex;
     flex-wrap: wrap;
     gap: 40px;
 }
 
-/* Left Column */
+/* LEFT COLUMN */
 .left-col {
     flex: 1 1 250px;
     max-width: 300px;
+    text-align: left;
 }
 
 .left-col h3 {
@@ -66,6 +66,7 @@ a:hover { opacity: 0.7; }
 .left-col ul {
     list-style: none;
     padding-left: 0;
+    margin-bottom: 20px;
 }
 
 .left-col li {
@@ -73,7 +74,7 @@ a:hover { opacity: 0.7; }
     font-size: 14px;
 }
 
-/* Right Column */
+/* RIGHT COLUMN */
 .right-col {
     flex: 2 1 600px;
 }
@@ -115,23 +116,12 @@ a:hover { opacity: 0.7; }
         <!-- LEFT COLUMN -->
         <div class="left-col">
             <!-- CONTACT -->
-<h3>CONTACT</h3>
-<ul style="list-style:none; padding-left:0; text-align:center;">
-    <!-- Phone -->
-    <li style="margin-bottom:10px;">
-        📱 <a href="tel:+31621506660">+31 6 21506660</a>
-    </li>
-
-    <!-- Email -->
-    <li style="margin-bottom:10px;">
-        ✉️ <a href="mailto:tim@vanveenidentity.com">tim@vanveenidentity.com</a>
-    </li>
-
-    <!-- Website -->
-    <li style="margin-bottom:10px;">
-        🔗 <a href="https://www.vanveenidentity.com" target="_blank">www.vanveenidentity.com</a>
-    </li>
-</ul>
+            <h3>CONTACT</h3>
+            <ul>
+                <li>📱 <a href="tel:+31621506660">+31 6 21506660</a></li>
+                <li>✉️ <a href="mailto:tim@vanveenidentity.com">tim@vanveenidentity.com</a></li>
+                <li>🔗 <a href="https://www.vanveenidentity.com" target="_blank">www.vanveenidentity.com</a></li>
+            </ul>
 
             <!-- SKILLS -->
             <h3>SKILLS</h3>
@@ -139,7 +129,7 @@ a:hover { opacity: 0.7; }
                 <li>Creative direction</li>
                 <li>Sound design & music production</li>
                 <li>Visual storytelling</li>
-                <li>Customer experience</li>
+                <li>Customer experience through interior & space design</li>
                 <li>Interior styling & mood design</li>
                 <li>Color, atmosphere, material sense</li>
                 <li>Handy work & technical execution</li>
@@ -155,7 +145,7 @@ a:hover { opacity: 0.7; }
                 <li>Avid Pro Tools</li>
                 <li>Final Cut Pro</li>
                 <li>Adobe Photoshop</li>
-                <li>(basic) Adobe Illustrator</li>
+                <li>Adobe Illustrator (basic)</li>
             </ul>
 
             <!-- INTERESTS -->
@@ -186,7 +176,7 @@ a:hover { opacity: 0.7; }
             <!-- WHAT I SOLVE -->
             <h3 class="section-title">WHAT I SOLVE FOR A BRAND / STORE</h3>
             <p><strong>Sound identity</strong><br>
-            • Custom sound logo's and in-store music<br>
+            • Custom sound logos and in-store music<br>
             • Custom playlists and brand soundscapes</p>
 
             <p><strong>Visual identity</strong><br>
@@ -209,9 +199,9 @@ a:hover { opacity: 0.7; }
 
             <!-- EXPERIENCE -->
             <h3 class="section-title">EXPERIENCE</h3>
-            <p><strong>Creative Director & Producer (</strong><br>
+            <p><strong>Creative Director & Producer</strong><br>
             2024 – present<br>
-            – Sound identity, music production <br>
+            – Sound identity, music production<br>
             – Visual mood content<br>
             – Short videos & color grading<br>
             – Branding & atmosphere creation</p>
@@ -228,21 +218,19 @@ a:hover { opacity: 0.7; }
             – Short mood videos<br>
             – Postproduction & color grading</p>
 
-            <p><strong>Interior & Design </strong><br>
+            <p><strong>Interior & Design</strong><br>
             2018– present<br>
             – Styling & interior setup<br>
             – Small construction / execution<br>
             – Material, color, flow</p>
 
-            <p><strong>Assistant Contractor </strong><br>
+            <p><strong>Assistant Contractor</strong><br>
             2010 – present<br>
             – Assembly, repairs, construction<br>
             – Practical & solution-oriented</p>
-
         </div>
 
     </div>
-
 </div>
 
 </body>
