--- a/cv/index.html
+++ b/cv/index.html
@@ -212,7 +212,7 @@ a:hover { opacity: 0.7; }
             – Artistic releases<br>
             – Creative direction in sound</p>
 
-            <p><strong>Photography & Video (Freelance)</strong><br>
+            <p><strong>Photography & Video</strong><br>
             2021 – present<br>
             – Film-look photography<br>
             – Short mood videos<br>
