Refactor contact, skills, tools, and interests sections

--- a/profile/index.html
+++ b/profile/index.html
@@ -114,52 +114,59 @@ a:hover { opacity: 0.7; }
     <div class="main">
 
         <!-- LEFT COLUMN -->
-        <div class="left-col">
-            <!-- CONTACT -->
-            <h3>CONTACT</h3>
-            <ul>
-                <li>📱 <a href="tel:+31621506660">+31 6 21506660</a></li>
-                <li>✉️ <a href="mailto:tim@vanveenidentity.com">tim@vanveenidentity.com</a></li>
-                <li>🔗 <a href="https://www.vanveenidentity.com" target="_blank">www.vanveenidentity.com</a></li>
-            </ul>
+<div class="left-col">
+    <!-- CONTACT -->
+    <h3>CONTACT</h3>
+    <ul>
+        <li>📱 <a href="tel:+31621506660">+31 6 21506660</a></li>
+        <li>✉️ <a href="mailto:tim@vanveenidentity.com">tim@vanveenidentity.com</a></li>
+        <li>🔗 <a href="https://www.vanveenidentity.com" target="_blank">www.vanveenidentity.com</a></li>
+    </ul>
 
-            <!-- SKILLS -->
-            <h3>SKILLS</h3>
-            <ul>
-                <li>Creative direction</li>
-                <li>Sound design & music production</li>
-                <li>Visual storytelling</li>
-                <li>Customer experience through interior & space design</li>
-                <li>Interior styling & mood design</li>
-                <li>Color, atmosphere, material sense</li>
-                <li>Handy work & technical execution</li>
-                <li>Video editing / color grading (FCP)</li>
-                <li>Photoshop (basic)</li>
-                <li>Illustrator (basic)</li>
-            </ul>
+    <!-- SKILLS -->
+    <h3>SKILLS</h3>
+    <ul>
+        <li>Creative direction</li>
+        <li>Sound design & music production</li>
+        <li>Visual storytelling</li>
+        <li>Customer experience through interior & space design</li>
+        <li>Interior styling & mood design</li>
+        <li>Color, atmosphere, material sense</li>
+        <li>Handy work & technical execution</li>
+        <li>Video editing / color grading (FCP)</li>
+        <li>Photoshop (basic)</li>
+        <li>Illustrator (basic)</li>
+    </ul>
 
-            <!-- TOOLS -->
-            <h3>TOOLS</h3>
-            <ul>
-                <li>Ableton Live</li>
-                <li>Avid Pro Tools</li>
-                <li>Final Cut Pro</li>
-                <li>Adobe Photoshop</li>
-                <li>Adobe Illustrator (basic)</li>
-            </ul>
+    <!-- TOOLS -->
+    <h3>TOOLS</h3>
+    <ul>
+        <li>Ableton Live</li>
+        <li>Avid Pro Tools</li>
+        <li>Final Cut Pro</li>
+        <li>Adobe Photoshop</li>
+        <li>Adobe Illustrator (basic)</li>
+    </ul>
 
-            <!-- INTERESTS -->
-            <h3>INTERESTS</h3>
-            <ul>
-                <li>Fashion</li>
-                <li>Interior aesthetics</li>
-                <li>Vintage photography</li>
-                <li>Slow living</li>
-                <li>Biohacking</li>
-                <li>Natural nutrition</li>
-                <li>Lofi & jazz</li>
-            </ul>
-        </div>
+    <!-- EDUCATION -->
+    <h3>EDUCATION</h3>
+    <ul>
+        <li><strong>BA (Hons)</strong><br>Music Composition & Production</li>
+        <li>LOI — Music Production (course)</li>
+    </ul>
+
+    <!-- INTERESTS -->
+    <h3>INTERESTS</h3>
+    <ul>
+        <li>Fashion</li>
+        <li>Interior aesthetics</li>
+        <li>Vintage photography</li>
+        <li>Slow living</li>
+        <li>Biohacking</li>
+        <li>Natural nutrition</li>
+        <li>Lofi & jazz</li>
+    </ul>
+</div>
 
         <!-- RIGHT COLUMN -->
         <div class="right-col">
