Revise profile content and update skills section
Updated various sections to reflect new roles and skills, and improved clarity in descriptions.

--- a/profile/index.html
+++ b/profile/index.html
@@ -106,7 +106,8 @@ a:hover { opacity: 0.7; }
     <!-- HEADER -->
     <div class="header">
         <h1>TIM VAN VEEN</h1>
-        <p><em>Creative Director – Sound & Visual Identity – Customer Experience through Interior & Space Design</em></p>
+        <p><em>Music Producer - Creative Director</em></p>
+        <p><em>Working with sound, picture and space</em></p>
         <p>Amsterdam</p>
     </div>
 
@@ -127,7 +128,8 @@ a:hover { opacity: 0.7; }
     <h3>SKILLS</h3>
     <ul>
         <li>Creative direction</li>
-        <li>Sound design & music production</li>
+        <li>Music Composition & Production</li>
+        <li>Sound Design</li>
         <li>Visual storytelling</li>
         <li>Customer experience through interior & space design</li>
         <li>Interior styling & mood design</li>
@@ -144,7 +146,7 @@ a:hover { opacity: 0.7; }
         <li>Ableton Live</li>
         <li>Avid Pro Tools</li>
         <li>Final Cut Pro</li>
-        <li>Adobe Photoshop</li>
+        <li>Adobe Photoshop (basic)</li>
         <li>Adobe Illustrator (basic)</li>
     </ul>
 
@@ -155,35 +157,33 @@ a:hover { opacity: 0.7; }
         <li>LOI — Music Production (course)</li>
     </ul>
 
-    <!-- INTERESTS -->
-    <h3>INTERESTS</h3>
-    <ul>
-        <li>Fashion</li>
-        <li>Interior aesthetics</li>
-        <li>Vintage photography</li>
-        <li>Slow living</li>
-        <li>Biohacking</li>
-        <li>Natural nutrition</li>
-        <li>Lofi & jazz</li>
-    </ul>
-</div>
+<!-- INTERESTS -->
+<h3>INTERESTS</h3>
+<ul>
+    <li>Fashion</li>
+    <li>Interior aesthetics</li>
+    <li>Design & materials</li>
+    <li>Photography & film</li>
+    <li>Sound & atmosphere</li>
+    <li>Lofi & jazz</li>
+</ul>
 
         <!-- RIGHT COLUMN -->
         <div class="right-col">
             <!-- PROFILE -->
             <h3 class="section-title">PROFILE</h3>
             <p>
-                I create sound, visuals and atmosphere for brands, stores and creative spaces.
-                With a background in music, vintage photography, interior & customer experience, I help places develop a unique vibe — warm, calm, and aesthetic.
+                I create sound, visuals and atmosphere for artists, brands, stores and creative spaces.
+                With a background in music, vintage photography, interior & customer experience, I help develop a unique vibe — warm, calm, and aesthetic.
             </p>
             <p>
                 I combine <strong>creative direction</strong> with <strong>hands-on support</strong>: from soundscapes and visual content to practical interior work.
             </p>
 
             <!-- WHAT I SOLVE -->
-            <h3 class="section-title">WHAT I SOLVE FOR A BRAND / STORE</h3>
+            <h3 class="section-title">WHAT I SOLVE FOR A BRAND / STORE / PROJECT</h3>
             <p><strong>Sound identity</strong><br>
-            • Custom sound logos and in-store music<br>
+            • Custom sound logos and music<br>
             • Custom playlists and brand soundscapes</p>
 
             <p><strong>Visual identity</strong><br>
@@ -208,13 +208,14 @@ a:hover { opacity: 0.7; }
             <h3 class="section-title">EXPERIENCE</h3>
             <p><strong>Creative Director & Producer</strong><br>
             2024 – present<br>
-            – Sound identity, music production<br>
+            – Sound identity<br>
             – Visual mood content<br>
             – Short videos & color grading<br>
             – Branding & atmosphere creation</p>
 
-            <p><strong>Studio Owner / Music Composer</strong><br>
+            <p><strong>Music Producer & Composer</strong><br>
             2013 – present<br>
+            - Recording, mixing and mastering<br>
             – Music for sync, library and background<br>
             – Artistic releases<br>
             – Creative direction in sound</p>
@@ -228,7 +229,7 @@ a:hover { opacity: 0.7; }
             <p><strong>Interior & Design</strong><br>
             2018– present<br>
             – Styling & interior setup<br>
-            – Small construction / execution<br>
+            – Construction / execution<br>
             – Material, color, flow</p>
 
             <p><strong>Assistant Contractor</strong><br>
