Refactor profile HTML for clarity and updates

--- a/profile/index.html
+++ b/profile/index.html
@@ -5,7 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="noindex, nofollow">
 <title>Tim van Veen — CV</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+
 <style>
 body {
     margin: 0;
@@ -54,7 +56,6 @@ a:hover { opacity: 0.7; }
 .left-col {
     flex: 1 1 250px;
     max-width: 300px;
-    text-align: left;
 }
 
 .left-col h3 {
@@ -99,6 +100,7 @@ a:hover { opacity: 0.7; }
 }
 </style>
 </head>
+
 <body>
 
 <div class="container">
@@ -106,136 +108,146 @@ a:hover { opacity: 0.7; }
     <!-- HEADER -->
     <div class="header">
         <h1>TIM VAN VEEN</h1>
-        <p><em>Music Producer - Creative Director</em></p>
-        <p><em>Working with sound, picture and space</em></p>
+        <p><em>Music Producer – Creative Director<br>Working with sound, visuals and space</em></p>
         <p>Amsterdam</p>
     </div>
 
-    <!-- MAIN LAYOUT -->
+    <!-- MAIN -->
     <div class="main">
 
         <!-- LEFT COLUMN -->
-<div class="left-col">
-    <!-- CONTACT -->
-    <h3>CONTACT</h3>
-    <ul>
-        <li>📱 <a href="tel:+31621506660">+31 6 21506660</a></li>
-        <li>✉️ <a href="mailto:tim@vanveenidentity.com">tim@vanveenidentity.com</a></li>
-        <li>🔗 <a href="https://www.vanveenidentity.com" target="_blank">www.vanveenidentity.com</a></li>
-    </ul>
+        <div class="left-col">
 
-    <!-- SKILLS -->
-    <h3>SKILLS</h3>
-    <ul>
-        <li>Creative direction</li>
-        <li>Music Composition & Production</li>
-        <li>Sound Design</li>
-        <li>Visual storytelling</li>
-        <li>Customer experience through interior & space design</li>
-        <li>Interior styling & mood design</li>
-        <li>Color, atmosphere, material sense</li>
-        <li>Handy work & technical execution</li>
-        <li>Video editing / color grading (FCP)</li>
-        <li>Photoshop (basic)</li>
-        <li>Illustrator (basic)</li>
-    </ul>
+            <!-- CONTACT -->
+            <h3>CONTACT</h3>
+            <ul>
+                <li>📱 <a href="tel:+31621506660">+31 6 21506660</a></li>
+                <li>✉️ <a href="mailto:tim@vanveenidentity.com">tim@vanveenidentity.com</a></li>
+                <li>🔗 <a href="https://www.vanveenidentity.com" target="_blank">www.vanveenidentity.com</a></li>
+            </ul>
 
-    <!-- TOOLS -->
-    <h3>TOOLS</h3>
-    <ul>
-        <li>Ableton Live</li>
-        <li>Avid Pro Tools</li>
-        <li>Final Cut Pro</li>
-        <li>Adobe Photoshop (basic)</li>
-        <li>Adobe Illustrator (basic)</li>
-    </ul>
+            <!-- SKILLS -->
+            <h3>SKILLS</h3>
+            <ul>
+                <li>Creative direction</li>
+                <li>Music production & sound design</li>
+                <li>Visual storytelling</li>
+                <li>Customer experience & atmosphere</li>
+                <li>Interior styling & mood design</li>
+                <li>Color, material & spatial sense</li>
+                <li>Hands-on execution & technical work</li>
+                <li>Video editing & color grading (FCP)</li>
+                <li>Photoshop (basic)</li>
+                <li>Illustrator (basic)</li>
+            </ul>
 
-    <!-- EDUCATION -->
-    <h3>EDUCATION</h3>
-    <ul>
-        <li><strong>BA (Hons)</strong><br>Music Composition & Production</li>
-        <li>LOI — Music Production (course)</li>
-    </ul>
+            <!-- TOOLS -->
+            <h3>TOOLS</h3>
+            <ul>
+                <li>Ableton Live</li>
+                <li>Avid Pro Tools</li>
+                <li>Final Cut Pro</li>
+                <li>Adobe Photoshop</li>
+                <li>Adobe Illustrator</li>
+            </ul>
 
-<!-- INTERESTS -->
-<h3>INTERESTS</h3>
-<ul>
-    <li>Fashion</li>
-    <li>Interior aesthetics</li>
-    <li>Design & materials</li>
-    <li>Photography & film</li>
-    <li>Sound & atmosphere</li>
-    <li>Lofi & jazz</li>
-</ul>
+            <!-- EDUCATION -->
+            <h3>EDUCATION</h3>
+            <ul>
+                <li>
+                    <strong>Bachelor of Music (Hons)</strong><br>
+                    Composition & Music Production
+                    Utrecht University of Arts (HKU)
+                </li>
+                <li>
+                    Music Production Course<br>
+                    LOI
+                </li>
+            </ul>
+
+            <!-- INTERESTS -->
+            <h3>INTERESTS</h3>
+            <ul>
+                <li>Fashion</li>
+                <li>Interior aesthetics</li>
+                <li>Design & materials</li>
+                <li>Photography & film</li>
+                <li>Sound & atmosphere</li>
+                <li>Lofi & jazz</li>
+            </ul>
+
+        </div>
 
         <!-- RIGHT COLUMN -->
         <div class="right-col">
+
             <!-- PROFILE -->
             <h3 class="section-title">PROFILE</h3>
             <p>
                 I create sound, visuals and atmosphere for artists, brands, stores and creative spaces.
-                With a background in music, vintage photography, interior & customer experience, I help develop a unique vibe — warm, calm, and aesthetic.
+                With a background in music, photography and interior experience, I help develop a unique, calm and intentional identity.
             </p>
             <p>
-                I combine <strong>creative direction</strong> with <strong>hands-on support</strong>: from soundscapes and visual content to practical interior work.
+                I combine <strong>creative direction</strong> with <strong>hands-on support</strong> — from soundscapes and visual content to practical interior work and daily presence on the floor.
             </p>
 
             <!-- WHAT I SOLVE -->
-            <h3 class="section-title">WHAT I SOLVE FOR A BRAND / STORE / PROJECT</h3>
+            <h3 class="section-title">WHAT I SOLVE FOR A BRAND / STORE</h3>
+
             <p><strong>Sound identity</strong><br>
             • Custom sound logos and music<br>
-            • Custom playlists and brand soundscapes</p>
+            • Playlists and brand soundscapes</p>
 
             <p><strong>Visual identity</strong><br>
-            • Vintage grain photography<br>
-            • Short mood videos<br>
-            • Color grading & mood content</p>
+            • Photography with a film-like aesthetic<br>
+            • Short-form mood videos<br>
+            • Color grading & visual tone</p>
 
             <p><strong>Customer experience</strong><br>
-            • Warm, calm, stylish atmosphere<br>
-            • Supporting customers with character and service</p>
+            • Calm, welcoming atmosphere<br>
+            • Attentive service with character</p>
 
-            <p><strong>Interior & space design</strong><br>
-            • Styling, flow, color, material choices<br>
-            • Acoustics and experience<br>
-            • Hands-on execution: design & build</p>
+            <p><strong>Interior & space</strong><br>
+            • Styling, flow, materials and color<br>
+            • Acoustics and spatial experience<br>
+            • Hands-on execution and build</p>
 
             <p><strong>Hands-on support</strong><br>
-            • Sales, floor work, store presentation<br>
-            • Daily support and atmosphere monitoring</p>
+            • Sales & floor presence<br>
+            • Presentation & atmosphere monitoring</p>
 
             <!-- EXPERIENCE -->
             <h3 class="section-title">EXPERIENCE</h3>
-            <p><strong>Creative Director & Producer</strong><br>
+
+            <p><strong>Creative Director & Music Producer</strong><br>
             2024 – present<br>
-            – Sound identity<br>
-            – Visual mood content<br>
-            – Short videos & color grading<br>
+            – Sound identity & music production<br>
+            – Visual mood content & short films<br>
             – Branding & atmosphere creation</p>
 
-            <p><strong>Music Producer & Composer</strong><br>
+            <p><strong>Studio Owner / Composer</strong><br>
             2013 – present<br>
-            - Recording, mixing and mastering<br>
-            – Music for sync, library and background<br>
+            – Music for sync, library & artists<br>
             – Artistic releases<br>
             – Creative direction in sound</p>
 
             <p><strong>Photography & Video</strong><br>
             2021 – present<br>
-            – Film-look photography<br>
-            – Short mood videos<br>
-            – Postproduction & color grading</p>
+            – Film-inspired photography<br>
+            – Mood-driven short videos<br>
+            – Postproduction & grading</p>
 
             <p><strong>Interior & Design</strong><br>
-            2018– present<br>
+            2018 – present<br>
             – Styling & interior setup<br>
-            – Construction / execution<br>
-            – Material, color, flow</p>
+            – Small construction & execution<br>
+            – Material and spatial flow</p>
 
             <p><strong>Assistant Contractor</strong><br>
             2010 – present<br>
-            – Assembly, repairs, construction<br>
-            – Practical & solution-oriented</p>
+            – Assembly, repairs & construction<br>
+            – Practical, solution-oriented support</p>
+
         </div>
 
     </div>
