Update description of Tim Van Veen

--- a/profile/index.html
+++ b/profile/index.html
@@ -130,7 +130,7 @@ a {
     <div class="header">
         <h1>TIM VAN VEEN</h1>
         <p><em>Music Producer – Creative Director</em></p>
-        <p><em>Working with sound, visuals and space</em></p>
+        <p><em>Crafting experiences working with sound, visuals and space</em></p>
         <p>Amsterdam</p>
     </div>
 
