Fix HTML tag formatting for Music Production Course

--- a/profile/index.html
+++ b/profile/index.html
@@ -177,7 +177,7 @@ a {
                     Utrecht University of Arts (HKU)
                 </li>
                 <li>
-                    <strong>Music Production Course</strong>strong><br>
+                    <strong>Music Production Course</strong><br>
                     LOI
                 </li>
             </ul>
