Update education description in index.html

--- a/profile/index.html
+++ b/profile/index.html
@@ -173,7 +173,7 @@ a {
             <ul>
                 <li>
                     <strong>Bachelor of Music (Hons)</strong><br>
-                    Composition & Music Production
+                    Music Composition and Production
                     Utrecht University of Arts (HKU)
                 </li>
                 <li>
